--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 Today is all about celebrating YOU and the amazing person you are!
             </p>
             
-            <button class="birthday-button" onclick="goToPage2(); playMusic();">
+            <button class="birthday-button" onclick="goToPage2()">
                 Click for a Special Surprise! 🎁
             </button>
         </div>
@@ -43,3 +43,4 @@
     <script src="java.js"></script>
 </body>
 </html>
+
